--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Urbanist";
   font-style: italic;
   font-weight: 200;
@@ -249,17 +249,10 @@
   src: url(https://fonts.gstatic.com/s/urbanist/v15/L0x-DF02iFML4hGCyMqlbS0.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
     U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+} */
 
 * {
-  font-family: "Urbanist", Helvetica, sans-serif !important;
-}
-
-pre {
-  font-family: "Fira Code", Courier, monospace !important;
-}
-pre * {
-  font-family: "Fira Code", Courier, monospace !important;
+  font-family: "Cabin", Helvetica, sans-serif !important;
 }
 
 /* html { */
@@ -273,6 +266,7 @@ pre * {
 
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
+  min-width: 100%;
   position: relative;
   overflow: auto;
 
