Pitstop - fleshing out hero sections in home page

--- a/src/components/Header/styles.module.sass
+++ b/src/components/Header/styles.module.sass
@@ -22,4 +22,4 @@
     position: absolute
     inset: 0
     left: -50px
-    box-shadow: 25px -15px 10px 25px black
+    // box-shadow: 25px -15px 10px 25px black
