Flesh out services pages with actual content

--- a/src/components/BlockButton/styles.module.sass
+++ b/src/components/BlockButton/styles.module.sass
@@ -1,11 +1,9 @@
-.arrowButton
-  svg
-    width: 35px
+.blockButton
   a 
     @media (max-width: $mantine-breakpoint-md)
-      svg
-        width: 30px
+      p
+        font-size: 0.8rem
 
     @media (max-width: $mantine-breakpoint-sm)
-      svg
-        width: 25px
+      p
+        font-size: 0.7rem
