--- a/src/components/Showcase/styles.module.sass
+++ b/src/components/Showcase/styles.module.sass
@@ -1,3 +1,5 @@
+@import src/Pages/components/PageHeader/styles.module
+
 .showcase
   display: grid
   grid-template-columns: 1fr auto
@@ -6,10 +8,11 @@
 
   .imageContainer
     width: 40vw
-    // min-width: 40vw
-    // max-width: 50vw
-    min-height: 40vh
-    aspect-ratio: 5 / 4
+    min-height: 100%
+    height: calc((100vh - var(--header-height)) - $subheader-target-height)
+
+    *
+      object-fit: scale-down
 
   .textContainer p
     white-space: pre-wrap
@@ -17,14 +20,9 @@
   @media (max-width: $mantine-breakpoint-md)
     grid-template-columns: 1fr
     grid-template-rows: 1fr auto
+    .textContainer
+      padding-bottom: 0 !important
     .imageContainer
       width: 100%
       max-width: 100vw
-      height: auto
       max-height: 400px
-      min-height: unset
-      // height: 0
-      // min-height: 100%
-      *
-        object-fit: scale-down
-        object-view-box: inset(10% 0% 10% 0%)
