Replace most services images

--- a/src/components/Header/components/HomeIcon/styles.module.sass
+++ b/src/components/Header/components/HomeIcon/styles.module.sass
@@ -12,6 +12,8 @@
   margin-bottom: 3% // accounting for uncentered logo
   width: 319px
   padding-right: 10px
+  object-view-box: inset(37% 15% 41% 11%)
+
   @media (max-width: $mantine-breakpoint-md)
     width: 240px
   @media (max-width: $mantine-breakpoint-xs)
