--- a/src/components/Album/styles.module.sass
+++ b/src/components/Album/styles.module.sass
@@ -8,17 +8,20 @@
 .pagination
   bottom: 3%
   left: 50%
+  display: flex
+  justify-content: center
+  width: 100%
   transform: translateX(-50%)
   position: absolute
 
   button
     border-radius: 50%
     background-color: white
-    border: solid 1px var(--mantine-color-dark-7)
+    border: solid 1px var(--mantine-color-dark-1)
+    box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.2)
     height: 17px
     width: 17px
     padding: 0
-    border: none
 
     &.active
       background-color: var(--mantine-color-dark-7)
