--- a/src/components/Footer/styles.module.sass
+++ b/src/components/Footer/styles.module.sass
@@ -1,7 +1,12 @@
-.footer_wrapper
-  display: inline
-
 .footer
+  a:focus
+    outline: solid 2px
+    outline-offset: 5px
+    border-radius: 5px
+  .footerLogos
+    img
+      display: block
+    gap: 1.75rem
   // max-height and overflow to allow footer scroll on very small screens
   max-height: calc(var(--vh, 1vh) * 100)
   overflow: auto
@@ -9,60 +14,20 @@
   position: sticky
   inset: 0
   top: unset
-  z-index: 0
-  // display: grid
-  padding: 25px 0
-  display: flex
   background-color: var(--colors-footer, grey)
-  // gap: 0
-  // grid-template-columns: repeat(4, 1fr)
-  flex-wrap: wrap
-  gap: 30px 0
-  padding: 30px
-  // grid-template-columns: repeat(auto-fit, minmax(200px, 1fr))
+  padding: 30px 70px
 
-  > div
-    // 201 empircally based on "Tip Me Live on Stream!"
-    // width: 25%
-    justify-content: center
-    white-space: nowrap
-    display: flex
-    margin-top: 0
-    margin-bottom: 0
-    margin-left: auto
-    margin-right: auto
-    > div
-      width: 201px
 
-  @media (max-width: $mantine-breakpoint-md)
-    // grid-template-columns: repeat(2, 1fr)
-    > div
-      width: 50%
-  
+  @media (max-width: $mantine-breakpoint-sm)
+    .footerLogos
+      gap: 1.25rem
+    padding: 30px 40px
+    img
+      height: 35px
+
   @media (max-width: $mantine-breakpoint-xs)
-    > div
-      width: 50%
-      white-space: unset
-      > div
-        width: 150px
-      *
-        font-size: $mantine-font-size-sm
-  @media (max-width: 400px)
-    > div
-      white-space: unset
-      > div
-        width: 100px
-      *
-        font-size: $mantine-font-size-xs !important
-
-.affix
-  @media (max-width: $mantine-breakpoint-xs)
-    display: none
-
-.footer_anchor
-  display: flex
-  align-items: center
-  gap: 15px
-
-  svg
-    height: 30px
+    .footerLogos
+      gap: 1rem
+    padding: 30px 30px
+    img
+      height: 30px
