--- a/src/Pages/PortfolioPage/styles.module.sass
+++ b/src/Pages/PortfolioPage/styles.module.sass
@@ -1,3 +1,77 @@
 .masonryImage
   padding: 0
   border: 0
+  border-radius: 5px
+  overflow: hidden
+
+.modal
+  & :global
+    .mantine-Modal-inner
+      @media (max-width: $mantine-breakpoint-md)
+        --modal-inner-x-offset: 7dvh
+        --modal-inner-y-offset: 7dvh
+      @media (max-width: $mantine-breakpoint-sm)
+        --modal-inner-x-offset: 5dvh
+        --modal-inner-y-offset: 5dvh
+  .imageSection
+    position: relative
+    margin: auto
+    height: 0
+    min-height: 100%
+    pointer-events: auto
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 100%
+    .imageWrapper
+      position: relative
+      height: auto
+      width: auto
+      max-height: 100%
+      max-width: 100%
+    .slowImage
+      height: unset
+      max-height: 100%
+      canvas
+        width: unset !important
+        object-fit: fill
+      img
+        left: 50%
+        transform: translate(-50%)
+        object-fit: contain
+
+  .closeButtonWrapper
+    position: absolute
+    top: 0
+    left: 0
+    transform: translate(-50%, -50%)
+    button
+      background-color: var(--mantine-color-dark-6)
+
+  .modalLink, p
+    pointer-events: auto
+
+  .modalContentGrid
+    display: grid
+    grid-template-columns: 1fr 1fr
+
+    @media (max-width: $mantine-breakpoint-xs)
+      grid-template-columns: 1fr
+      grid-template-rows: 3fr 2fr
+  & :global
+    .mantine-Modal-inner
+      inset: 0
+    .mantine-Modal-content
+      pointer-events: none
+      overflow: visible
+      height: 100%
+      display: grid
+      background-color: unset
+      border-radius: unset !important
+      box-shadow: unset !important
+      height: 0
+      min-height: 100%
+    .mantine-Modal-body
+      height: 0%
+      min-height: 100%
+      padding: 0
